move env variables to config files